# sudoku-solver

./: .gitignore  CHANGELOG.md  README.md  input.txt  sudoku-solver.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: GenerateSudoku.hs  Sudoku.hs
