cabal-version:      2.4
name:               sudoku-solver
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Rafael Cano
maintainer:         rafael.cano@ucsp.edu.pe

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable sudoku-solver
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Sudoku GenerateSudoku

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.12.0.0 , split >= 0.2.2 , random
    hs-source-dirs:   app , src 
    default-language: Haskell2010
